--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.5.1",
     "npm": "^6.14.6",
     "popper.js": "^1.16.1",
+    "toastr": "^2.1.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
